# Pyramid

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  Pyramid.1  config.h.in  configure  configure.ac  configure.scan  main_pyramid.c  readme.md
CodeBlocks/: Pyramid.cbp  Pyramid.layout
Pyramid.xcodeproj/: project.pbxproj
